Add CO tag to XP 2025

--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1076,4 +1076,4 @@
   date: June 2 - June 5, 2025
   place: Brugg - Windisch, Switzerland
   note: Recommended abstract deadline on January 19, 2025
-  tags: [RPT]
+  tags: [CO, RPT]
