Update the EASE's description

--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1079,7 +1079,7 @@
   tags: [CO, RPT]
 
 name: EASE-RPT
-  description: International Conference on Agile Software Development - Research Track
+  description: The International Conference on Evaluation and Assessment in Software Engineering (EASE) - Research Track
   year: 2025
   link: https://conf.researchr.org/home/ease-2025
   deadline:
