--- a/_data/types.yml
+++ b/_data/types.yml
@@ -44,7 +44,10 @@
 - name: Experience papers track
   tag: EXPT
   type: track
-
+- name: Data and Benchmarking track
+  tag: DB
+  type: track
+  
 # Others
 
 - name: Artifact track
