update track name

--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -110,7 +110,7 @@
   - "2024-12-13 23:59"
   date: April 27 - April 28, 2025
   place: Ottawa, Ontario, Canada
-  tags: [CO, Benchmarking]
+  tags: [CO, DB]
 
 - name: SMeW
   description: Student Mentoring Workshop
