Add `SPT`, `IPT`, `JFT`, and `NIER` tracks.

--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1100,4 +1100,4 @@
   date: June 17 - June 20, 2025
   place: Istanbul, Turkey
   note: Abstract deadline on January 12, 2025
-  tags: [CO, RPT]
+  tags: [CO, RPT, SPT, IPT, JFT, NIER]
