--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1103,7 +1103,7 @@
   tags: [CO, RPT]
 
 - name: SEAA-RPT
-  description: The 51st Euromicro Conference Series on Software Engineering and Advanced Applications (SEAA) - Research Track
+  description: The 51st Euromicro Conference Series on Software Engineering and Advanced Applications (SEAA) - Research Paper Track
   year: 2025
   link: https://dsd-seaa.com/seaa2025/
   deadline:
@@ -1113,7 +1113,7 @@
   tags: [CO, RPT]
 
 - name: DSD-RPT
-  description: The 28th Euromicro Conference Series on Digital System Design (DSD) - Research Track
+  description: The 28th Euromicro Conference Series on Digital System Design (DSD) - Research Paper Track
   year: 2025
   link: https://dsd-seaa.com/dsd2025/
   deadline:
