--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1100,4 +1100,64 @@
   date: June 17 - June 20, 2025
   place: Istanbul, Turkey
   note: Abstract deadline on January 12, 2025
-  tags: [CO, RPT, SPT, IPT, JFT, NIER]
+  tags: [CO, RPT]
+
+- name: EASE-SPER
+  description: The International Conference on Evaluation and Assessment in Software Engineering (EASE) - Short Papers, Emerging Results
+  year: 2025
+  link: https://conf.researchr.org/track/ease-2025/ease-2025-short-papers--emerging-results
+  deadline:
+   - "2025-03-16 23:59"
+  date: June 17 - June 20, 2025
+  place: Istanbul, Turkey
+  tags: [CO, SPT]
+
+- name: EASE-IP
+  description: The International Conference on Evaluation and Assessment in Software Engineering (EASE) - Industry Papers
+  year: 2025
+  link: https://conf.researchr.org/track/ease-2025/ease-2025-industry-papers
+  deadline:
+   - "2025-03-16 23:59"
+  date: June 17 - June 20, 2025
+  place: Istanbul, Turkey
+  note: Abstract deadline on March 9, 2025
+  tags: [CO, IPT]
+
+- name: EASE-PV
+  description: The International Conference on Evaluation and Assessment in Software Engineering (EASE) - Posters and Vision
+  year: 2025
+  link: https://conf.researchr.org/track/ease-2025/ease-2025-posters-and-vision
+  deadline:
+   - "2025-03-16 23:59"
+  date: June 17 - June 20, 2025
+  place: Istanbul, Turkey
+  tags: [CO, POS]
+
+- name: EASE-JF
+  description: The International Conference on Evaluation and Assessment in Software Engineering (EASE) - Journal-first
+  year: 2025
+  link: https://conf.researchr.org/track/ease-2025/ease-2025-journal-first
+  deadline: ["TBA"]
+  date: June 17 - June 20, 2025
+  place: Istanbul, Turkey
+  tags: [CO, JFT]
+
+- name: EASE-DS
+  description: The International Conference on Evaluation and Assessment in Software Engineering (EASE) - Doctoral Symposium
+  year: 2025
+  link: https://conf.researchr.org/track/ease-2025/ease-2025-doctoral-symposium
+  deadline:
+   - "2025-03-10 23:59"
+  date: June 17 - June 20, 2025
+  place: Istanbul, Turkey
+  tags: [CO, DOS]
+
+- name: EASE-AID
+  description: The International Conference on Evaluation and Assessment in Software Engineering (EASE) - AI Models / Data
+  year: 2025
+  link: https://conf.researchr.org/track/ease-2025/ease-2025-ai-models---data
+  deadline:
+   - "2025-03-16 23:59"
+  date: June 17 - June 20, 2025
+  place: Istanbul, Turkey
+  tags: [CO, DB]
