--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,17 +1,19 @@
 ---
-   
+
 # ICSEs
 - name: ICSE
   description: International Conference on Software Engineering - Research Track
-  year: 2025
-  link: https://conf.researchr.org/track/icse-2025/icse-2025-research-track
+  year: 2026
+  link: https://conf.researchr.org/track/icse-2026/icse-2026-research-track
   deadline: 
-  - "2024-03-22 23:59"
-  - "2024-08-02 23:59"
-  date: April 27 - May 3, 2025
-  place: Ottawa, Ontario, Canada
-  note: Mandatory abstract deadline on March 15 (first deadline) and July 26 (second deadline) 2024.
+  - "2025-03-14 23:59"
+  - "2025-07-18 23:59"
+  date: April 12 - April 18, 2026
+  place: Rio de Janeiro, Brazil
+  note: Mandatory abstract deadline on March 7 (first deadline) and July 11 (second deadline) 2025.
   tags: [CO, RPT]
+   
+# ICSEs
 
 - name: ICSE-SEIP
   description: International Conference on Software Engineering - Software Engineering in Practice
